--- a/Tracker/Base.lproj/TRMain.storyboard
+++ b/Tracker/Base.lproj/TRMain.storyboard
@@ -70,22 +70,42 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64T-tC-Stf" customClass="SpringButton" customModule="Spring">
-                                                    <rect key="frame" x="308" y="18" width="22" height="22"/>
+                                                    <rect key="frame" x="260" y="18" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="hQN-xh-Bx9"/>
+                                                        <constraint firstAttribute="width" constant="30" id="zFi-kU-2Ps"/>
+                                                    </constraints>
                                                     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <connections>
                                                         <action selector="plusButtonPressed:" destination="BHp-H0-CJH" eventType="touchUpInside" id="vu8-ef-w6b"/>
                                                     </connections>
                                                 </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D7j-YL-SPF" userLabel="More Button">
+                                                    <rect key="frame" x="305" y="18" width="30" height="30"/>
+                                                    <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <state key="normal" backgroundImage="more-dots">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="moreButtonPressed:" destination="BHp-H0-CJH" eventType="touchUpInside" id="j4l-4A-LMm"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="bT1-vX-V4Z" firstAttribute="top" secondItem="Vqo-Nd-b2b" secondAttribute="topMargin" constant="10" id="0Ag-wQ-30e"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="64T-tC-Stf" secondAttribute="trailing" constant="5" id="7Ob-Ls-m4D"/>
+                                                <constraint firstItem="D7j-YL-SPF" firstAttribute="top" secondItem="bT1-vX-V4Z" secondAttribute="top" id="BTe-qU-P0j"/>
+                                                <constraint firstItem="D7j-YL-SPF" firstAttribute="height" secondItem="64T-tC-Stf" secondAttribute="height" id="FCY-mS-WZI"/>
+                                                <constraint firstItem="64T-tC-Stf" firstAttribute="trailing" secondItem="D7j-YL-SPF" secondAttribute="leading" constant="-15" id="QFU-0y-QWp"/>
                                                 <constraint firstItem="bT1-vX-V4Z" firstAttribute="leading" secondItem="Vqo-Nd-b2b" secondAttribute="leadingMargin" constant="5" id="QUH-bO-FxJ"/>
-                                                <constraint firstItem="64T-tC-Stf" firstAttribute="top" secondItem="bT1-vX-V4Z" secondAttribute="top" id="RWA-2e-Qqm"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="D7j-YL-SPF" secondAttribute="trailing" id="Wnj-fs-KiN"/>
+                                                <constraint firstItem="D7j-YL-SPF" firstAttribute="width" secondItem="64T-tC-Stf" secondAttribute="width" id="XTR-kO-23V"/>
+                                                <constraint firstItem="64T-tC-Stf" firstAttribute="top" secondItem="bT1-vX-V4Z" secondAttribute="top" id="kto-We-c3a"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <connections>
                                             <outlet property="itemLabel" destination="bT1-vX-V4Z" id="uAj-HP-CNM"/>
+                                            <outlet property="moreButton" destination="D7j-YL-SPF" id="Oul-Hj-r7I"/>
                                             <outlet property="plusButton" destination="64T-tC-Stf" id="Lqa-aG-bJx"/>
                                         </connections>
                                     </tableViewCell>
@@ -519,87 +539,10 @@
             </objects>
             <point key="canvasLocation" x="566.5" y="-244.5"/>
         </scene>
-        <!--Tracking Options Table View Controller-->
-        <scene sceneID="6We-yq-Qe8">
-            <objects>
-                <tableViewController storyboardIdentifier="TRTrackingOptions" id="x88-3p-yJp" customClass="TRTrackingOptionsTableViewController" customModule="Tracker" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="zdx-V8-jaS" customClass="TPKeyboardAvoidingTableView">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="trackUrge" rowHeight="60" id="pkJ-sL-hry">
-                                <rect key="frame" x="0.0" y="28" width="600" height="60"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pkJ-sL-hry" id="U0m-Oh-DEn">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="59.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="no-circle" translatesAutoresizingMaskIntoConstraints="NO" id="2Jo-JH-aBl">
-                                            <rect key="frame" x="22" y="20" width="20" height="20"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="20" id="4Q3-wh-4Kk"/>
-                                                <constraint firstAttribute="width" constant="20" id="iko-EI-DFZ"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Urge" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjK-kb-HBg">
-                                            <rect key="frame" x="56" y="18" width="81" height="24"/>
-                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="kjK-kb-HBg" firstAttribute="leading" secondItem="2Jo-JH-aBl" secondAttribute="trailing" constant="14" id="ChN-JS-2yn"/>
-                                        <constraint firstItem="2Jo-JH-aBl" firstAttribute="centerY" secondItem="U0m-Oh-DEn" secondAttribute="centerY" id="HFT-q0-4QU"/>
-                                        <constraint firstItem="2Jo-JH-aBl" firstAttribute="leading" secondItem="U0m-Oh-DEn" secondAttribute="leadingMargin" constant="14" id="Ol2-rA-CRq"/>
-                                        <constraint firstItem="kjK-kb-HBg" firstAttribute="centerY" secondItem="U0m-Oh-DEn" secondAttribute="centerY" id="t2H-eg-cU8"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="trackMultiple" rowHeight="60" id="iH3-av-x0n">
-                                <rect key="frame" x="0.0" y="88" width="600" height="60"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iH3-av-x0n" id="Uuy-nH-jjZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Track Multiple" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0u-qn-oaj">
-                                            <rect key="frame" x="22" y="18" width="107" height="24"/>
-                                            <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wpG-Cg-Ncd">
-                                            <rect key="frame" x="278" y="14" width="300" height="30"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits"/>
-                                        </textField>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="wpG-Cg-Ncd" firstAttribute="width" secondItem="Uuy-nH-jjZ" secondAttribute="width" multiplier="0.5" id="1hX-7Q-HUe"/>
-                                        <constraint firstItem="g0u-qn-oaj" firstAttribute="leading" secondItem="Uuy-nH-jjZ" secondAttribute="leadingMargin" constant="14" id="DDP-Qa-4Yc"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="wpG-Cg-Ncd" secondAttribute="trailing" constant="14" id="bWg-95-ona"/>
-                                        <constraint firstItem="wpG-Cg-Ncd" firstAttribute="centerY" secondItem="Uuy-nH-jjZ" secondAttribute="centerY" id="ekU-Cu-YXr"/>
-                                        <constraint firstItem="g0u-qn-oaj" firstAttribute="centerY" secondItem="Uuy-nH-jjZ" secondAttribute="centerY" id="ncl-l6-WOf"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="x88-3p-yJp" id="Zxc-aH-4uq"/>
-                            <outlet property="delegate" destination="x88-3p-yJp" id="xCi-jH-SQ5"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="OFg-KK-nHq" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="679" y="531"/>
-        </scene>
     </scenes>
     <resources>
         <image name="full__0000s_0091_config" width="25" height="25"/>
         <image name="full__0000s_0106_note" width="23" height="23"/>
-        <image name="no-circle" width="300" height="297"/>
+        <image name="more-dots" width="64" height="64"/>
     </resources>
 </document>
