--- a/Tracker/Base.lproj/TRMain.storyboard
+++ b/Tracker/Base.lproj/TRMain.storyboard
@@ -64,26 +64,31 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bT1-vX-V4Z">
-                                                    <rect key="frame" x="13" y="18" width="39" height="22"/>
+                                                    <rect key="frame" x="13" y="22" width="39" height="22"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Roman" family="Avenir" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64T-tC-Stf" customClass="SpringButton" customModule="Spring">
-                                                    <rect key="frame" x="260" y="18" width="30" height="30"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64T-tC-Stf" customClass="SpringButton" customModule="Spring">
+                                                    <rect key="frame" x="258" y="13" width="40" height="40"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="hQN-xh-Bx9"/>
-                                                        <constraint firstAttribute="width" constant="30" id="zFi-kU-2Ps"/>
+                                                        <constraint firstAttribute="height" constant="40" id="hQN-xh-Bx9"/>
+                                                        <constraint firstAttribute="width" constant="40" id="zFi-kU-2Ps"/>
                                                     </constraints>
                                                     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <state key="normal" image="plus-circle"/>
                                                     <connections>
                                                         <action selector="plusButtonPressed:" destination="BHp-H0-CJH" eventType="touchUpInside" id="vu8-ef-w6b"/>
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D7j-YL-SPF" userLabel="More Button">
-                                                    <rect key="frame" x="305" y="18" width="30" height="30"/>
+                                                    <rect key="frame" x="313" y="18" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="fz1-60-MPZ"/>
+                                                        <constraint firstAttribute="width" constant="30" id="hPa-ek-yCa"/>
+                                                    </constraints>
                                                     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <state key="normal" backgroundImage="more-dots">
+                                                    <state key="normal" image="more-dots">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
                                                     <connections>
@@ -92,14 +97,12 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="bT1-vX-V4Z" firstAttribute="top" secondItem="Vqo-Nd-b2b" secondAttribute="topMargin" constant="10" id="0Ag-wQ-30e"/>
-                                                <constraint firstItem="D7j-YL-SPF" firstAttribute="top" secondItem="bT1-vX-V4Z" secondAttribute="top" id="BTe-qU-P0j"/>
-                                                <constraint firstItem="D7j-YL-SPF" firstAttribute="height" secondItem="64T-tC-Stf" secondAttribute="height" id="FCY-mS-WZI"/>
+                                                <constraint firstItem="bT1-vX-V4Z" firstAttribute="top" secondItem="Vqo-Nd-b2b" secondAttribute="topMargin" constant="14" id="0Ag-wQ-30e"/>
+                                                <constraint firstItem="64T-tC-Stf" firstAttribute="top" secondItem="Vqo-Nd-b2b" secondAttribute="topMargin" constant="5" id="OK6-zU-c0B"/>
                                                 <constraint firstItem="64T-tC-Stf" firstAttribute="trailing" secondItem="D7j-YL-SPF" secondAttribute="leading" constant="-15" id="QFU-0y-QWp"/>
                                                 <constraint firstItem="bT1-vX-V4Z" firstAttribute="leading" secondItem="Vqo-Nd-b2b" secondAttribute="leadingMargin" constant="5" id="QUH-bO-FxJ"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="D7j-YL-SPF" secondAttribute="trailing" id="Wnj-fs-KiN"/>
-                                                <constraint firstItem="D7j-YL-SPF" firstAttribute="width" secondItem="64T-tC-Stf" secondAttribute="width" id="XTR-kO-23V"/>
-                                                <constraint firstItem="64T-tC-Stf" firstAttribute="top" secondItem="bT1-vX-V4Z" secondAttribute="top" id="kto-We-c3a"/>
+                                                <constraint firstItem="D7j-YL-SPF" firstAttribute="trailing" secondItem="Vqo-Nd-b2b" secondAttribute="trailing" id="Wnj-fs-KiN"/>
+                                                <constraint firstItem="D7j-YL-SPF" firstAttribute="top" secondItem="Vqo-Nd-b2b" secondAttribute="topMargin" constant="10" id="hFQ-Ha-Gem"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -292,7 +295,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Weo-Rp-p4z">
-                                                    <rect key="frame" x="33" y="12" width="311" height="28"/>
+                                                    <rect key="frame" x="33" y="11" width="311" height="28"/>
                                                     <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="20"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -544,5 +547,6 @@
         <image name="full__0000s_0091_config" width="25" height="25"/>
         <image name="full__0000s_0106_note" width="23" height="23"/>
         <image name="more-dots" width="64" height="64"/>
+        <image name="plus-circle" width="128" height="128"/>
     </resources>
 </document>
