--- a/Tracker/TRCalendarCollectionViewCell.xib
+++ b/Tracker/TRCalendarCollectionViewCell.xib
@@ -17,7 +17,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <animations/>
-            <color key="backgroundColor" red="0.38972739680000001" green="0.90588235289999997" blue="0.3764396639" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <size key="customSize" width="353" height="105"/>
             <point key="canvasLocation" x="534.5" y="280.5"/>
         </collectionViewCell>
