--- a/Tracker/TRStatsView.xib
+++ b/Tracker/TRStatsView.xib
@@ -18,6 +18,7 @@
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="pEk-Ps-Pg1">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <animations/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="VFe-h2-wo9">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -35,7 +36,7 @@
                 </pageControl>
             </subviews>
             <animations/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="pEk-Ps-Pg1" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="1Rd-5u-l3q"/>
                 <constraint firstAttribute="bottom" secondItem="pEk-Ps-Pg1" secondAttribute="bottom" id="EPn-C4-FVH"/>
